fix: refactoring after review
